src/main/resources/japath3/processing/japath-1.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = peg$anyExpectation(),
      peg$c1 = function(p) { return stringify({start: p}); },
      peg$c2 = "(",
      peg$c3 = peg$literalExpectation("(", false),
      peg$c4 = ")",
      peg$c5 = peg$literalExpectation(")", false),
      peg$c6 = function(s) {return s;},
      peg$c7 = "null",
      peg$c8 = peg$literalExpectation("null", false),
      peg$c9 = function() {return {constant: {}};},
      peg$c10 = function(pi) {return pi;},
      peg$c11 = ":",
      peg$c12 = peg$literalExpectation(":", false),
      peg$c13 = function(c) {return {constant: c};},
      peg$c14 = function(p) {return p;},
      peg$c15 = function(y, e) { return {assignment: {lhs: typeof y === 'string' ? { step: { property: y}} : y, rhs: e }}},
      peg$c16 = ".",
      peg$c17 = peg$literalExpectation(".", false),
      peg$c18 = function(x) { return {path: skip(flatten(x), '.')}; },
      peg$c19 = function(x) { return x; },
      peg$c20 = function(x) { return {step: x}; },
      peg$c21 = "_",
      peg$c22 = peg$literalExpectation("_", false),
      peg$c23 = "self",
      peg$c24 = peg$literalExpectation("self", false),
      peg$c25 = function() { return {self: ''}; },
      peg$c26 = "**",
      peg$c27 = peg$literalExpectation("**", false),
      peg$c28 = function() { return {wild: 'desc'}; },
      peg$c29 = "*",
      peg$c30 = peg$literalExpectation("*", false),
      peg$c31 = function() { return {wild: 'all'}; },
      peg$c32 = "selector",
      peg$c33 = peg$literalExpectation("selector", false),
      peg$c34 = "\xA7",
      peg$c35 = peg$literalExpectation("\xA7", false),
      peg$c36 = function(x) { return {selector: x}; },
      peg$c37 = "union",
      peg$c38 = peg$literalExpectation("union", false),
      peg$c39 = function(a) { return {arrayFlag: false, args: a}; },
      peg$c40 = "[",
      peg$c41 = peg$literalExpectation("[", false),
      peg$c42 = "]",
      peg$c43 = peg$literalExpectation("]", false),
      peg$c44 = function(a) { return {arrayFlag: true, args: a}; },
      peg$c45 = function(x) { return {union: x}; },
      peg$c46 = "eq",
      peg$c47 = peg$literalExpectation("eq", false),
      peg$c48 = "neq",
      peg$c49 = peg$literalExpectation("neq", false),
      peg$c50 = "lt",
      peg$c51 = peg$literalExpectation("lt", false),
      peg$c52 = "gt",
      peg$c53 = peg$literalExpectation("gt", false),
      peg$c54 = "le",
      peg$c55 = peg$literalExpectation("le", false),
      peg$c56 = "ge",
      peg$c57 = peg$literalExpectation("ge", false),
      peg$c58 = "match",
      peg$c59 = peg$literalExpectation("match", false),
      peg$c60 = function(op, a) { return {compare: {op: op, arg: a}}; },
      peg$c61 = "and",
      peg$c62 = peg$literalExpectation("and", false),
      peg$c63 = "assert",
      peg$c64 = peg$literalExpectation("assert", false),
      peg$c65 = "or",
      peg$c66 = peg$literalExpectation("or", false),
      peg$c67 = "xor",
      peg$c68 = peg$literalExpectation("xor", false),
      peg$c69 = "not",
      peg$c70 = peg$literalExpectation("not", false),
      peg$c71 = function(op, a) { op = op === 'assert' ? 'and' : op; return {boolExpr: {op: op, args: a}}; },
      peg$c72 = "true",
      peg$c73 = peg$literalExpectation("true", false),
      peg$c74 = "false",
      peg$c75 = peg$literalExpectation("false", false),
      peg$c76 = function(a) { return {boolExpr: {op: 'constant', args: a}}; },
      peg$c77 = "imply",
      peg$c78 = peg$literalExpectation("imply", false),
      peg$c79 = ",",
      peg$c80 = peg$literalExpectation(",", false),
      peg$c81 = function(p, c) {  return {boolExpr: {op: 'imply', args: [p, c]}}; },
      peg$c82 = "every",
      peg$c83 = peg$literalExpectation("every", false),
      peg$c84 = function(q, c) { return {quantifierExpr: {op: 'every', quant: q, check:c}}; },
      peg$c85 = "some",
      peg$c86 = peg$literalExpectation("some", false),
      peg$c87 = function(q, c) { return {quantifierExpr: {op: 'some', quant: q, check:c}}; },
      peg$c88 = "filter",
      peg$c89 = peg$literalExpectation("filter", false),
      peg$c90 = "?",
      peg$c91 = peg$literalExpectation("?", false),
      peg$c92 = function(b) { return {filter: b}; },
      peg$c93 = "cond",
      peg$c94 = peg$literalExpectation("cond", false),
      peg$c95 = function(cond, ifExpr, elseExpr) {   if (elseExpr !== null) elseExpr = elseExpr[2]; else elseExpr = null; 
              return {conditional: {cond: cond, ifExpr: ifExpr, elseExpr: elseExpr }}; },
      peg$c96 = "optional",
      peg$c97 = peg$literalExpectation("optional", false),
      peg$c98 = "opt",
      peg$c99 = peg$literalExpectation("opt", false),
      peg$c100 = function(o) { return {optional: o}; },
      peg$c101 = "type",
      peg$c102 = peg$literalExpectation("type", false),
      peg$c103 = "String",
      peg$c104 = peg$literalExpectation("String", false),
      peg$c105 = "Number",
      peg$c106 = peg$literalExpectation("Number", false),
      peg$c107 = "Boolean",
      peg$c108 = peg$literalExpectation("Boolean", false),
      peg$c109 = "Any",
      peg$c110 = peg$literalExpectation("Any", false),
      peg$c111 = function(t) { return {hasType: t}; },
      peg$c112 = "text",
      peg$c113 = peg$literalExpectation("text", false),
      peg$c114 = function() { return {text: ''}; },
      peg$c115 = "$",
      peg$c116 = peg$literalExpectation("$", false),
      peg$c117 = function(id) { return {var: (id === null ? 'root' : id)}; },
      peg$c118 = "def",
      peg$c119 = peg$literalExpectation("def", false),
      peg$c120 = function(id, e) { return {def: {name: id , expr: e}}; },
      peg$c121 = "#",
      peg$c122 = peg$literalExpectation("#", false),
      peg$c123 = function(i) { return {argNumber: i}; },
      peg$c124 = function(id, a) { return {exprAppl: {name: id, args: a}}; },
      peg$c125 = "{",
      peg$c126 = peg$literalExpectation("{", false),
      peg$c127 = "}",
      peg$c128 = peg$literalExpectation("}", false),
      peg$c129 = function(a) { return { subExpr: {args: a} }; },
      peg$c130 = "new",
      peg$c131 = peg$literalExpectation("new", false),
      peg$c132 = function() { return {create: ''}; },
      peg$c133 = function(a) { return { struct: {args: a} }; },
      peg$c134 = "::",
      peg$c135 = peg$literalExpectation("::", false),
      peg$c136 = function(func, a) { return { funcCall: {kind: 'directive', ns: '', func: func, args: a !== null ? a[2] : null } }; },
      peg$c137 = "js",
      peg$c138 = peg$literalExpectation("js", false),
      peg$c139 = "javascript",
      peg$c140 = peg$literalExpectation("javascript", false),
      peg$c141 = function(ns, func, a) { return { funcCall: {kind: 'javascript', ns: ns, func: func, args: a} }; },
      peg$c142 = "j",
      peg$c143 = peg$literalExpectation("j", false),
      peg$c144 = "ava",
      peg$c145 = peg$literalExpectation("ava", false),
      peg$c146 = function(ns, func, a) { return { funcCall: {kind: 'java', ns: ns, func: func, args: a} }; },
      peg$c147 = function(x) { return {property: x}; },
      peg$c148 = "..",
      peg$c149 = peg$literalExpectation("..", false),
      peg$c150 = function(i, upper) { return {subscript: i, seq: true, upper: upper === null ? null : (upper[2] === null ? -1 : upper[2]) }; },
      peg$c151 = function(i) { return {subscript: i}; },
      peg$c152 = function(id) { return { step: {bind: id}}; },
      peg$c153 = function(x) { return skip(flatten(x), ','); },
      peg$c154 = function() { return parseInt(text(), 10); },
      peg$c155 = "-",
      peg$c156 = peg$literalExpectation("-", false),
      peg$c157 = function() { return Number(text()); },
      peg$c158 = /^[eE]/,
      peg$c159 = peg$classExpectation(["e", "E"], false, false),
      peg$c160 = "+",
      peg$c161 = peg$literalExpectation("+", false),
      peg$c162 = "0",
      peg$c163 = peg$literalExpectation("0", false),
      peg$c164 = /^[1-9]/,
      peg$c165 = peg$classExpectation([["1", "9"]], false, false),
      peg$c166 = /^[0-9]/,
      peg$c167 = peg$classExpectation([["0", "9"]], false, false),
      peg$c168 = "'",
      peg$c169 = peg$literalExpectation("'", false),
      peg$c170 = "\\'",
      peg$c171 = peg$literalExpectation("\\'", false),
      peg$c172 = /^[^']/,
      peg$c173 = peg$classExpectation(["'"], true, false),
      peg$c174 = function(s) { return s.join('').replace(/\\'/g, "'"); },
      peg$c175 = "\"",
      peg$c176 = peg$literalExpectation("\"", false),
      peg$c177 = "\\\"",
      peg$c178 = peg$literalExpectation("\\\"", false),
      peg$c179 = /^[^"]/,
      peg$c180 = peg$classExpectation(["\""], true, false),
      peg$c181 = function(s) { return s.join('').replace(/\\"/g, '"'); },
      peg$c182 = /^[a-zA-Z_]/,
      peg$c183 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c184 = /^[a-zA-Z0-9_]/,
      peg$c185 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c186 = function(id) { return flatten(id).join(''); },
      peg$c187 = "`",
      peg$c188 = peg$literalExpectation("`", false),
      peg$c189 = "\\`",
      peg$c190 = peg$literalExpectation("\\`", false),
      peg$c191 = /^[^`]/,
      peg$c192 = peg$classExpectation(["`"], true, false),
      peg$c193 = function(id) { return id.join('').replace(/\\`/g, '`'); },
      peg$c194 = peg$otherExpectation("whitespace"),
      peg$c195 = /^[ \t\n\r]/,
      peg$c196 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c197 = "//",
      peg$c198 = peg$literalExpectation("//", false),
      peg$c199 = /^[\r\n]/,
      peg$c200 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c201 = function() {return null;},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesimpleExpr();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          peg$silentFails++;
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c0); }
          }
          peg$silentFails--;
          if (s5 === peg$FAILED) {
            s4 = void 0;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesimpleExpr() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesimpleExpr();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c4;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c6(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = peg$parseNumber();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c10(s2);
        }
        s1 = s2;
        if (s1 === peg$FAILED) {
          s1 = peg$currPos;
          s2 = peg$parseString();
          if (s2 !== peg$FAILED) {
            s3 = peg$currPos;
            peg$silentFails++;
            s4 = peg$currPos;
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s6 = peg$c11;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            peg$silentFails--;
            if (s4 === peg$FAILED) {
              s3 = void 0;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
            if (s3 !== peg$FAILED) {
              peg$savedPos = s1;
              s2 = peg$c6(s2);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c13(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsepath();
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            peg$silentFails++;
            s3 = peg$currPos;
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s5 = peg$c11;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
            peg$silentFails--;
            if (s3 === peg$FAILED) {
              s2 = void 0;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parseassignment();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseassignment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsepath();
    if (s1 === peg$FAILED) {
      s1 = peg$parseString();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c11;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesimpleExpr();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15(s1, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepath() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
